Fix navigation alignment for tablet and deskop screen.

--- a/css/styles.css
+++ b/css/styles.css
@@ -863,12 +863,31 @@ main {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  /*@include mq($xs) {
-            @include flexible($direction: row,
-                               $justify-content: center);
-            
-        }*/
   width: 100%;
+}
+
+@media (min-width: 576px) {
+  .main-nav__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
+
+@media (min-width: 576px) {
+  .main-nav__icon {
+    margin-bottom: 1em;
+  }
 }
 
 .headline--primary {
